Update Biojava to version 7.3.0; update CDK to version 2.13; support JDK 27 in the command line version of FFX